[package]
name = "RustQuant_autodiff"
authors.workspace = true
description.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lints]
workspace = true

[dev-dependencies]
RustQuant = { path = "../RustQuant" }

[dependencies]
ndarray = { workspace = true }
errorfunctions = { workspace = true }
RustQuant_utils = { workspace = true }
lazy_static = "1.5.0"
num-traits = "0.2.19"

## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
## RUSTDOC CONFIGURATION
## Includes KaTeX for math rendering.
## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--html-in-header", "katex.html", "--cfg", "docsrs"]
